# FoveatedRenderer

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
glad/include/glad/: glad.h  glad_wgl.h
glad/src/: glad.c  glad_wgl.c
src/: main.cpp  window.cpp  window.h
